syntax = "proto3";
//生成文件所在包名
option java_package = "com.gejian.pixel.proto";
//生成的java文件名
option java_outer_classname = "ConstLevelUpgradeTableItemExProtobuf";

message	ConstLevelUpgradeTableItemEx  {
	 uint32	id = 1;
	 uint32	lv = 2;
	 uint32	start0 = 3;
	 uint32	start1 = 4;
	 uint32	start2 = 5;
	 uint32	start3 = 6;
	 uint32	start4 = 7;
	 uint32	start5 = 8;
	 uint32	start6 = 9;
	 uint32	start7 = 10;
	 uint32	start8 = 11;
	 uint32	start9 = 12;
	 uint32	start10 = 13;
	 uint32	start11 = 14;
	 uint32	start12 = 15;
	 uint32	start13 = 16;
	 uint32	start14 = 17;
	 uint32	start15 = 18;
	 uint32	start16 = 19;
	 uint32	start17 = 20;
	 uint32	start18 = 21;
	 uint32	start19 = 22;
	 uint32	start20 = 23;
	 uint32	start21 = 24;
	 uint32	start22 = 25;
	 uint32	start23 = 26;
	 uint32	start24 = 27;
	 uint32	start25 = 28;
}